fixed overflow fix project size

--- a/styles/layout_and_header_styles.css
+++ b/styles/layout_and_header_styles.css
@@ -17,7 +17,7 @@
   margin: 0;
   padding: 0;
 }
-body{width: 99vw; height: 100vh;}
+body{width: 100vw; height: 100vh;}
 
 .dash_container{
   display: grid;
@@ -27,6 +27,7 @@ body{width: 99vw; height: 100vh;}
   width: 100%;
   height: 100%;
   background-color: var(--empty_space);
+  overflow-x: hidden;
 }
 .header{
   grid-area: 1/2 / 2/2;
