--- a/styles/main_section_styles.css
+++ b/styles/main_section_styles.css
@@ -25,7 +25,7 @@
 }
 .project-section .p_container{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 20px;
   padding: 5px;
 }
